fix: mobile layout problem

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -126,6 +126,10 @@
   position: relative;
   z-index: 2;
   display: none;
+  border: none;
+  outline: none;
+  background-color: rgba(255, 255, 255, 0);
+  cursor: pointer;
   @include tablet {
     display: flex;
     flex-direction: column;
