--- a/src/styles/layouts/_board.scss
+++ b/src/styles/layouts/_board.scss
@@ -6,6 +6,9 @@
 
 .board-title {
   margin: 0;
+  @include mobile {
+    font-size: 2rem;
+  }
 }
 
 .members-select {
